--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-eslint": "^7.2.3",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.5.2",
     "eslint": "^4.0.0"
   },
   "scripts": {
-    "build": "babel ./src/index.js -o ./index.js --no-comments"
+    "build": "babel ./src --out-dir ./ --no-comments"
+  },
+  "dependencies": {
+    "redux": "^3.7.1"
   }
 }
